# ms_boot

./: .ccls  .clang-format  .clangd  .gitmodules  CMakeLists.txt  Kconfig  Makefile  packages.json
arch/arm/cmake/: FindArmToolchain.cmake
arch/armv6-m/: arch_config.json
boards/: Kconfig
boards/raspberry_pico/: board_configuration.json
boards/rpi_pico/: board.cpp  board.hpp  flash_configuration.hpp  pico.ld  raspberry_pico.json  rpi_pico.kconfig
cmake/: GenerateConfig.cmake  GetPackageConfig.cmake  parse_hw_config.cmake
cpu/rp2040/: cpu_config.json  packages.json
cpu/rp2040/cmake/: Findrp2040.cmake
doc/: flash_bootloader.txt  mbr.txt
kconfig/: compiler.kconfig  generate_config.py
mbr/arch/armv6-m/rpi_pico/: CMakeLists.txt  append.py  append_checksum.py  boot.S  boot.ld  boot_configure_flash.S  boot_prepare_flash.ld  make_uf2.py  memory_layout.txt
scripts/: flash.py  flash_bootloader.py
source/: CMakeLists.txt  blink.s  configuration.cpp  configuration.hpp  connection.cpp  connection.hpp  firmware_loader.cpp  firmware_loader.hpp  flasher.cpp  flasher.hpp  logger.hpp  main.cpp  printer.cpp  printer.hpp  test.cpp
source/arch/: CMakeLists.txt
source/arch/armv6-m/rp2040/: CMakeLists.txt  clocks.cpp  clocks.hpp  crt0.S  linker_script.ld  memorymap.hpp  register_manipulator.hpp  syscalls.cpp  system_init.cpp  usart.cpp  usart.hpp  vector_table.S
source/hw/rp2040/Modules/: Findrp2040.cmake
source/hw/rp2040/Modules/Platform/: rp2040.cmake
